[metadata]
name = tdm_loader
description = Open National Instruments TDM/TDX files as NumPy structured arrays.
author = Florian Dobener
author_email = florian.dobener@schroedingerscat.org
maintainer = Florian Dobener
maintainer_email = florian.dobener@schroedingerscat.org
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/domna/tdm_loader
project_urls = 
    Source = https://github.com/domna/tdm_loader
    Download = https://github.com/domna/tdm_loader/releases
    Documentation = https://tdm-loader.readthedocs.io/en/latest/
    Changelog = https://github.com/domna/tdm_loader/blob/master/CHANGELOG.md
    Tracker = https://github.com/domna/tdm_loader/issues
platforms = any
classifiers = 
    Development Status :: 4 - Beta
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research

[options]
install_requires =
    numpy>=1.14
